--- a/example_regional.ipynb
+++ b/example_regional.ipynb
@@ -162,14 +162,14 @@
     "CELERITY = 310  # [m/s]\n",
     "\n",
     "S = grid_search(\n",
-    "        processed_st=st_proc,\n",
-    "        grid=grid,\n",
-    "        time_method=TIME_METHOD,\n",
-    "        starttime=STARTTIME,\n",
-    "        endtime=ENDTIME,\n",
-    "        stack_method=STACK_METHOD,\n",
-    "        celerity=CELERITY,\n",
-    "    )"
+    "    processed_st=st_proc,\n",
+    "    grid=grid,\n",
+    "    time_method=TIME_METHOD,\n",
+    "    starttime=STARTTIME,\n",
+    "    endtime=ENDTIME,\n",
+    "    stack_method=STACK_METHOD,\n",
+    "    celerity=CELERITY,\n",
+    ")"
    ]
   },
   {
@@ -187,7 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_slice = plot_time_slice(S, st_proc, label_stations=True, hires=False, plot_peak=True)\n",
+    "fig_slice = plot_time_slice(\n",
+    "    S, st_proc, label_stations=True, hires=False, plot_peak=True\n",
+    ")\n",
     "fig_slice.set_size_inches([9, 12])\n",
     "fig_slice.show()\n",
     "\n",
