--- a/example_regional.ipynb
+++ b/example_regional.ipynb
@@ -97,6 +97,7 @@
     "    'LD?',\n",
     "    time_buffer=calculate_time_buffer(grid, MAX_RADIUS),\n",
     "    remove_response=False,  # Avoid dealing with polynomial response\n",
+    "    iris_only=True,\n",
     ")\n",
     "\n",
     "# Remove stations with duplicate locations\n",
