--- a/example_local.ipynb
+++ b/example_local.ipynb
@@ -40,11 +40,25 @@
    "source": [
     "## 1. Define grid\n",
     "\n",
-    "To obtain `DEM_WGS84.tif` from OpenTopography, run the command\n",
-    "```\n",
-    "curl https://cloud.sdsc.edu/v1/AUTH_opentopography/hosted_data/OTDS.072019.4326.1/raster/DEM_WGS84.tif -o DEM_WGS84.tif\n",
-    "```\n",
-    "or simply paste the above URL in a web browser. Alternatively, specify `None` to automatically download and use 1 arc-second STRM data."
+    "To obtain `DEM_WGS84.tif` from OpenTopography, run the command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd463a13-533c-4bee-95c9-7391d3ba2de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl 'https://cloud.sdsc.edu/v1/AUTH_opentopography/hosted_data/OTDS.072019.4326.1/raster/DEM_WGS84.tif' -o DEM_WGS84.tif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "567ec2a4-5ac5-43d6-b504-56adf9658426",
+   "metadata": {},
+   "source": [
+    "or simply paste the above quoted URL in a web browser. Alternatively, specify `EXTERNAL_FILE = None` to automatically download and use 1 arc-second STRM data."
    ]
   },
   {
