--- a/example_local.ipynb
+++ b/example_local.ipynb
@@ -58,7 +58,7 @@
    "id": "567ec2a4-5ac5-43d6-b504-56adf9658426",
    "metadata": {},
    "source": [
-    "or simply paste the above quoted URL in a web browser. Alternatively, specify `EXTERNAL_FILE = None` to automatically download and use 1 arc-second STRM data."
+    "or simply paste the above quoted URL in a web browser. Alternatively, specify `EXTERNAL_FILE = None` to automatically download and use 1 arc-second SRTM data."
    ]
   },
   {
