Better DEM retrieval for local example

--- a/example_local.ipynb
+++ b/example_local.ipynb
@@ -17,6 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "from urllib.request import urlretrieve\n",
     "import warnings\n",
     "\n",
     "import numpy as np\n",
@@ -40,17 +42,22 @@
    "source": [
     "## 1. Define grid\n",
     "\n",
-    "To obtain `DEM_WGS84.tif` from OpenTopography, run the command"
+    "To obtain `DEM_WGS84.tif` from OpenTopography (~200 MB GeoTIFF), run:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd463a13-533c-4bee-95c9-7391d3ba2de1",
+   "id": "9cf71665",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl 'https://cloud.sdsc.edu/v1/AUTH_opentopography/hosted_data/OTDS.072019.4326.1/raster/DEM_WGS84.tif' -o DEM_WGS84.tif"
+    "DEM_URL = 'https://opentopography.s3.sdsc.edu/dataspace/OTDS.072019.4326.1/raster/DEM_WGS84.tif'\n",
+    "dem_file = DEM_URL.split('/')[-1]\n",
+    "if not Path(dem_file).is_file():\n",
+    "    print('Downloading DEM...')\n",
+    "    urlretrieve(DEM_URL, dem_file)\n",
+    "    print('Done')"
    ]
   },
   {
@@ -58,17 +65,19 @@
    "id": "567ec2a4-5ac5-43d6-b504-56adf9658426",
    "metadata": {},
    "source": [
-    "or simply paste the above quoted URL in a web browser. Alternatively, specify `EXTERNAL_FILE = None` to automatically download and use 1 arc-second SRTM data."
+    "Alternatively, specify `EXTERNAL_FILE = None` to automatically download and use 1 arc-second SRTM data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "afee6300-e5a1-4ec1-9aa6-c60f81f1573a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "EXTERNAL_FILE = 'DEM_WGS84.tif'\n",
+    "EXTERNAL_FILE = dem_file\n",
     "\n",
     "LON_0 = 169.448212  # [deg] Longitude of grid center\n",
     "LAT_0 = -19.527908  # [deg] Latitude of grid center\n",
@@ -237,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
