--- a/example_local.ipynb
+++ b/example_local.ipynb
@@ -65,7 +65,7 @@
    "id": "567ec2a4-5ac5-43d6-b504-56adf9658426",
    "metadata": {},
    "source": [
-    "Alternatively, specify `EXTERNAL_FILE = None` to automatically download and use 1 arc-second SRTM data."
+    "Alternatively, specify `EXTERNAL_FILE = None` below to automatically download and use 1 arc-second SRTM data."
    ]
   },
   {
