--- a/example_local.ipynb
+++ b/example_local.ipynb
@@ -199,7 +199,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3702cc84-3b4b-4c5d-8f6f-c15811c8598d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "fig_st = plot_st(\n",
