--- a/example_regional.ipynb
+++ b/example_regional.ipynb
@@ -78,7 +78,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26af6c3b-d05a-4fef-978f-15b14d51ee4c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Start and end of time window containing (suspected) events\n",
@@ -221,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
