Add stored result kw to nb

--- a/example_local_infresnel.ipynb
+++ b/example_local_infresnel.ipynb
@@ -95,7 +95,12 @@
       "PROCESSING DEM\n",
       "--------------\n",
       "Using external DEM file:\n",
-      "\t/Users/ltoney/repos/rtm/DEM_WGS84.tif\n"
+      "\t/Users/ltoney/repos/rtm/DEM_WGS84.tif\n",
+      "Created output DEM file:\n",
+      "\t/Users/ltoney/repos/rtm/rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif\n",
+      "Done\n",
+      "Generating DEM hillshade plot...\n",
+      "Done\n"
      ]
     },
     {
@@ -105,17 +110,6 @@
       "RTMWarning: Elevation units are assumed to be in meters!\n",
       "/Users/ltoney/repos/rtm/rtm/grid.py:341: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created output DEM file:\n",
-      "\t/Users/ltoney/repos/rtm/rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif\n",
-      "Done\n",
-      "Generating DEM hillshade plot...\n",
-      "Done\n"
      ]
     },
     {
@@ -307,7 +301,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fe15cbf70364f9ba9d46721edcb4ce9",
+       "model_id": "ace6e21f43f5423b8ce5b842f2e5cd6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,7 +345,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0438e32c83354c51ad902a6fe9a1b73e",
+       "model_id": "4408eca0f36e4da5a7f7da66e71f6767",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7fe1b40095245d2b288f206f6440e48",
+       "model_id": "b4fb7b918f88402eb48a03c39570ea2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e119de506454de5b6faab65d1786a6b",
+       "model_id": "d411812405dc4332b6de770b30987c12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,7 +477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bbecc2cb9a040d0948544d0de4bf0d7",
+       "model_id": "b568e8c962fc4a56a359820a252cd225",
        "version_major": 2,
        "version_minor": 0
       },
@@ -508,6 +502,7 @@
      "text": [
       "Done\n",
       "Done (elapsed time = 30 s)\n",
+      "Diffracted path lengths saved to diff_path_lens.nc\n",
       "----------------------\n",
       "PERFORMING GRID SEARCH\n",
       "Method = 'sum'\n",
@@ -539,7 +534,7 @@
    "source": [
     "STACK_METHOD = 'sum'  # Choose either 'sum', 'product', or 'semblance'\n",
     "TIME_METHOD = 'infresnel'  # Choose either 'celerity' or 'fdtd' or 'infresnel'\n",
-    "TIME_KWARGS = {'celerity': 343, 'dem_file': 'rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif'}  # Using file output earlier\n",
+    "TIME_KWARGS = {'celerity': 343, 'dem_file': 'rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif', 'stored_result': 'diff_path_lens.nc'}  # Using file output earlier\n",
     "\n",
     "S = grid_search(\n",
     "    processed_st=st_proc,\n",
