n_jobs=-2 to nb

--- a/example_local_infresnel.ipynb
+++ b/example_local_infresnel.ipynb
@@ -95,12 +95,7 @@
       "PROCESSING DEM\n",
       "--------------\n",
       "Using external DEM file:\n",
-      "\t/Users/ltoney/repos/rtm/DEM_WGS84.tif\n",
-      "Created output DEM file:\n",
-      "\t/Users/ltoney/repos/rtm/rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif\n",
-      "Done\n",
-      "Generating DEM hillshade plot...\n",
-      "Done\n"
+      "\t/Users/ltoney/repos/rtm/DEM_WGS84.tif\n"
      ]
     },
     {
@@ -110,6 +105,17 @@
       "RTMWarning: Elevation units are assumed to be in meters!\n",
       "/Users/ltoney/repos/rtm/rtm/grid.py:341: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created output DEM file:\n",
+      "\t/Users/ltoney/repos/rtm/rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif\n",
+      "Done\n",
+      "Generating DEM hillshade plot...\n",
+      "Done\n"
      ]
     },
     {
@@ -270,7 +276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ltoney/repos/rtm/rtm/travel_time.py:404: UserWarning: 42.8% of DEM is NaN!\n",
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:406: UserWarning: 42.8% of DEM is NaN!\n",
       "  _diff_path_lens = calculate_paths(\n"
      ]
     },
@@ -301,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ace6e21f43f5423b8ce5b842f2e5cd6a",
+       "model_id": "8a4701c77c244af8aee51264b68e9e85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ltoney/repos/rtm/rtm/travel_time.py:404: UserWarning: 42.8% of DEM is NaN!\n",
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:406: UserWarning: 42.8% of DEM is NaN!\n",
       "  _diff_path_lens = calculate_paths(\n"
      ]
     },
@@ -345,7 +351,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4408eca0f36e4da5a7f7da66e71f6767",
+       "model_id": "c462e2d2b03f4b00ab00c95e00270d8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,7 +366,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ltoney/repos/rtm/rtm/travel_time.py:404: UserWarning: 42.8% of DEM is NaN!\n",
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:406: UserWarning: 42.8% of DEM is NaN!\n",
       "  _diff_path_lens = calculate_paths(\n"
      ]
     },
@@ -389,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4fb7b918f88402eb48a03c39570ea2b",
+       "model_id": "5f9f9b4e8927469f9a34cbb1d6e92f22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,7 +410,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ltoney/repos/rtm/rtm/travel_time.py:404: UserWarning: 42.8% of DEM is NaN!\n",
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:406: UserWarning: 42.8% of DEM is NaN!\n",
       "  _diff_path_lens = calculate_paths(\n"
      ]
     },
@@ -433,7 +439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d411812405dc4332b6de770b30987c12",
+       "model_id": "7cc0238715604cd9a282d5eac7285c11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +454,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ltoney/repos/rtm/rtm/travel_time.py:404: UserWarning: 42.8% of DEM is NaN!\n",
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:406: UserWarning: 42.8% of DEM is NaN!\n",
       "  _diff_path_lens = calculate_paths(\n"
      ]
     },
@@ -477,7 +483,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b568e8c962fc4a56a359820a252cd225",
+       "model_id": "fe93b1f0bcaa4060b09936871f94989f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -501,7 +507,7 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "Done (elapsed time = 30 s)\n",
+      "Done (elapsed time = 19 s)\n",
       "Diffracted path lengths saved to diff_path_lens.nc\n",
       "----------------------\n",
       "PERFORMING GRID SEARCH\n",
@@ -513,7 +519,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% |████████████████████████████████████████████████| 15851/15851 grid points "
+      "100% |████████████████████████████████████████████████| 15851/15851 grid points \n"
      ]
     },
     {
@@ -522,19 +528,12 @@
      "text": [
       "Done (elapsed time = 1.1 s)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
     "STACK_METHOD = 'sum'  # Choose either 'sum', 'product', or 'semblance'\n",
     "TIME_METHOD = 'infresnel'  # Choose either 'celerity' or 'fdtd' or 'infresnel'\n",
-    "TIME_KWARGS = {'celerity': 343, 'dem_file': 'rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif', 'stored_result': 'diff_path_lens.nc'}  # Using file output earlier\n",
+    "TIME_KWARGS = {'celerity': 343, 'dem_file': 'rtm_dem/rtm_dem_-19.5279_169.4482_600x_650y_10m.tif', 'stored_result': 'diff_path_lens.nc', 'n_jobs': -2}  # Using file output earlier\n",
     "\n",
     "S = grid_search(\n",
     "    processed_st=st_proc,\n",
@@ -562,14 +561,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ltoney/repos/rtm/rtm/plotting.py:455: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
-      "  fig.show()\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -584,6 +575,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/ltoney/repos/rtm/rtm/plotting.py:455: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "  fig.show()\n",
       "/Users/ltoney/repos/rtm/rtm/plotting.py:270: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
       "/Users/ltoney/repos/rtm/rtm/plotting.py:380: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
