--- a/example_local_infresnel.ipynb
+++ b/example_local_infresnel.ipynb
@@ -59,7 +59,20 @@
    "execution_count": 2,
    "id": "9cf71665",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and resampling DEM...\n",
+      "Creating output file that is 253P x 260L.\n",
+      "Using internal nodata values (e.g. 0) for image /var/folders/kt/r_9qxn7d6wgc0lwylt3t3qx8bb196z/T/tmpt5e3xzg3.\n",
+      "Copying nodata values from source /var/folders/kt/r_9qxn7d6wgc0lwylt3t3qx8bb196z/T/tmpt5e3xzg3 to destination DEM_WGS84_resampled.tif.\n",
+      "Processing /var/folders/kt/r_9qxn7d6wgc0lwylt3t3qx8bb196z/T/tmpt5e3xzg3 [1/1] : 0...10...20...30...40...50...60...70...80...90...100 - done.\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "DEM_URL = 'https://opentopography.s3.sdsc.edu/dataspace/OTDS.072019.4326.1/raster/DEM_WGS84.tif'\n",
     "dem_file = 'DEM_WGS84_resampled.tif'\n",
@@ -240,6 +253,228 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:409: UserWarning: 52.3% of DEM is NaN!\n",
+      "  _diff_path_lens = calculate_paths(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "CALCULATING TRAVEL TIMES USING INFRESNEL WITH CELERITY = 343 M/S\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "(1/5) Station 3E.YIF1.01.CDF\n",
+      "\n",
+      "Loading and projecting DEM...\n",
+      "Done\n",
+      "\n",
+      "DEM spacing = 5.40 m -> profile spacing = 2.70 m\n",
+      "\n",
+      "Checking that DEM contains source and receivers...\n",
+      "Done — 6934 invalid paths will be set to NaN\n",
+      "\n",
+      "Fitting spline to DEM...\n",
+      "Done\n",
+      "\n",
+      "Computing 15851 paths...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcae3740fb014c62b4d5b5dfbf2bacc7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0% |          | 0/15851 paths "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:409: UserWarning: 52.3% of DEM is NaN!\n",
+      "  _diff_path_lens = calculate_paths(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "\n",
+      "(2/5) Station 3E.YIF2.01.CDF\n",
+      "\n",
+      "Loading and projecting DEM...\n",
+      "Done\n",
+      "\n",
+      "DEM spacing = 5.40 m -> profile spacing = 2.70 m\n",
+      "\n",
+      "Checking that DEM contains source and receivers...\n",
+      "Done — 6934 invalid paths will be set to NaN\n",
+      "\n",
+      "Fitting spline to DEM...\n",
+      "Done\n",
+      "\n",
+      "Computing 15851 paths...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51208a0bb7f74ece97505ee57203766a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0% |          | 0/15851 paths "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:409: UserWarning: 52.3% of DEM is NaN!\n",
+      "  _diff_path_lens = calculate_paths(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "\n",
+      "(3/5) Station 3E.YIF3.01.CDF\n",
+      "\n",
+      "Loading and projecting DEM...\n",
+      "Done\n",
+      "\n",
+      "DEM spacing = 5.40 m -> profile spacing = 2.70 m\n",
+      "\n",
+      "Checking that DEM contains source and receivers...\n",
+      "Done — 6934 invalid paths will be set to NaN\n",
+      "\n",
+      "Fitting spline to DEM...\n",
+      "Done\n",
+      "\n",
+      "Computing 15851 paths...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a342ff82fd64ef7bf2aba5c47cda8af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0% |          | 0/15851 paths "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:409: UserWarning: 52.3% of DEM is NaN!\n",
+      "  _diff_path_lens = calculate_paths(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "\n",
+      "(4/5) Station 3E.YIF4.01.CDF\n",
+      "\n",
+      "Loading and projecting DEM...\n",
+      "Done\n",
+      "\n",
+      "DEM spacing = 5.40 m -> profile spacing = 2.70 m\n",
+      "\n",
+      "Checking that DEM contains source and receivers...\n",
+      "Done — 6934 invalid paths will be set to NaN\n",
+      "\n",
+      "Fitting spline to DEM...\n",
+      "Done\n",
+      "\n",
+      "Computing 15851 paths...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "43328ae8548f43f2be04fff65c1ac67b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0% |          | 0/15851 paths "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ltoney/repos/rtm/rtm/travel_time.py:409: UserWarning: 52.3% of DEM is NaN!\n",
+      "  _diff_path_lens = calculate_paths(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "\n",
+      "(5/5) Station 3E.YIF5.01.CDF\n",
+      "\n",
+      "Loading and projecting DEM...\n",
+      "Done\n",
+      "\n",
+      "DEM spacing = 5.40 m -> profile spacing = 2.70 m\n",
+      "\n",
+      "Checking that DEM contains source and receivers...\n",
+      "Done — 6934 invalid paths will be set to NaN\n",
+      "\n",
+      "Fitting spline to DEM...\n",
+      "Done\n",
+      "\n",
+      "Computing 15851 paths...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf58c92e26d24a90ae3b166c230fcb40",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0% |          | 0/15851 paths "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/ltoney/repos/rtm/rtm/grid.py:480: RuntimeWarning: invalid value encountered in cast\n",
       "  st[0].stats.sampling_rate).astype(int)\n"
      ]
@@ -248,9 +483,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------------------------------------------------------------\n",
-      "LOADING TRAVEL TIMES FROM diff_path_lens.nc WITH CELERITY = 343 M/S\n",
-      "----------------------------------------------------------------\n",
+      "Done\n",
+      "Done (elapsed time = 20 s)\n",
+      "Diffracted path lengths saved to diff_path_lens.nc\n",
       "----------------------\n",
       "PERFORMING GRID SEARCH\n",
       "Method = 'sum'\n",
@@ -327,7 +562,8 @@
       "\t/Users/ltoney/repos/rtm/DEM_WGS84_resampled.tif\n",
       "Done\n",
       "Returning just global max!\n",
-      "Unprojecting coordinates from UTM to (latitude, longitude).\n"
+      "Unprojecting coordinates from UTM to (latitude, longitude).\n",
+      "Converting to x/y grid, cropping 600 m from center\n"
      ]
     },
     {
@@ -341,7 +577,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting to x/y grid, cropping 600 m from center\n",
       "Found 1 peaks in stack for height > 3.0 and min_time > 2.0 s.\n",
       "Unprojecting coordinates from UTM to (latitude, longitude).\n"
      ]
